# peddler

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_file_coverage.py
src/peddler/: __init__.py  email.py  launcher.py
src/peddler/applog/: __init__.py  store.py  tools.py
src/peddler/browser/: __init__.py  fields.py  navigation.py  retry.py  session.py
src/peddler/commands/: apply.md
src/peddler/credentials/: __init__.py  passwords.py  store.py  tools.py
src/peddler/mcp/: __init__.py  main.py  registry.py  server.py  transport.py
tests/: test_check_file_coverage.py  test_email.py  test_launcher.py
tests/applog/: test_store.py  test_tools.py
tests/browser/: test_fields.py  test_navigation.py  test_real_adapter.py  test_retry.py  test_session.py
tests/commands/: test_apply_command.py
tests/credentials/: test_passwords.py  test_store.py  test_tools.py
tests/fixtures/: application_form.html  late_render.html
tests/mcp/: test_main.py  test_registry.py  test_server.py  test_transport.py
